<resources>
    <string name="app_name">PausaMatic</string>
    <string name="indietro_button_label">&lt;&lt;</string>
    <string name="eleRicariche">Ricariche da consolidare</string>
    <string name="consolida_button_label">Cons.</string>
    <string name="Inizializza_button_label">Inizializza</string>
    <string name="Save_button_label">Salva</string>
    <string name="dataManutenzione">Data Manut.</string>
    <string name="impostaredescrizione">Impostare la Descrizione</string>
    <string name="impostareBattute">Impostare il Numero di Battute</string>
    <string name="controlloqnt">Controllo quantità</string>
    <string name="impostareqnt">Impostare la quantità</string>
    <string name="eleRicavi">Ricavi da consolidare</string>
    <string name="insRicavi_button_label">+</string>
    <string name="insManutenzione">Inserimento Manutenzione</string>
    <string name="descCliente">Cliente</string>
    <string name="tipomanutenzione">Tipo</string>
    <string name="nbattute">Battute</string>
    <string name="scegliTipoManutenzione">Scegli il Tipo</string>
    <string name="DescrizioneManutenzione">Descrizione</string>
    <string name="NoteManutenzione">Note</string>
    <string name="Exit_button_label">Esci</string>
    <string name="quantitaArticolo">Quantità</string>
    <string name="dataArticolo">Data Ric.</string>
    <string name="pVendArticolo">P. Vendita</string>
    <string name="costoArticolo">Costo</string>
    <string name="descArticolo">Articolo</string>
    <string name="insRicarica">Inserimento Ricarica</string>
    <string name="insRicavo">Inserimento Ricavo</string>
    <string name="Ricavo">Ricavo</string>
    <string name="battuteFreddo">Battute F.</string>
    <string name="battuteCaldo">Battute C.</string>
    <string name="form_Login">Inserire utenza e password e premere Accedi.</string>
    <string name="utente">Utenza</string>
    <string name="password">Password</string>
    <string name="login_button_label">Accedi</string>
    <string name="menuPrincipale">Menu Principale</string>
    <string name="cliente">Cliente</string>
    <string name="scegliCliente">Scegli il Cliente</string>
    <string name="distributore">Distributore</string>
    <string name="scegliDistributore">Scegli il Distributore</string>
    <string name="Utility_button_label">Utility</string>
    <string name="Monitoraggio_button_label">Manutenzione</string>
    <string name="Ricariche_button_label">Ricariche</string>
    <string name="Ricavi_button_label">Ricavi</string>
    <string name="EleRic_button_label">El.Ricariche</string>
    <string name="scegliArticolo">Lista Articoli</string>
    <string name="scegliCategoria">Scegli la Categoria</string>
    <string name="form_settings">Parametri di connessione alla base dati remota.</string>
    <string name="indirizzoIp_id">Indirizzo IP</string>
    <string name="porta_id">Porta di collegamento</string>
    <string name="nomeBasedati">Nome Base Dati</string>
    <string name="utenteMySql">Utenza MySQL</string>
    <string name="passwordMySql">Password MySQL</string>
    <string name="utilita">Utility</string>
    <string name="Settings_button_label">Settings</string>
    <string name="Listini_button_label">Allineamento Listini</string>
    <string name="Trasmetti_button_label">Trasmissione Dati</string>
    <string name="Reset_button_label">Reset Base Dati Locale</string>
    <string name="seleziona">Seleziona</string>
    <string name="login_checkbox_caption">Memorizza Password</string>
    <string name="ricariche_menu_title">Ricariche</string>
    <string name="listino_totale_checkbox_caption">Listino Totale</string>
    <string name="Backup_button_label">Backup del DB su SD Card</string>
    <string name="settings_progressbar_label_text">Attendere prego ...</string>
</resources>

<!--<string name="abc_action_bar_home_description">Navigate home</string>-->
<!--<string name="abc_action_bar_up_description">Navigate up</string>-->
<!--<string name="abc_action_menu_overflow_description">More options</string>-->
<!--<string name="abc_action_mode_done">Done</string>-->
<!--<string name="abc_activity_chooser_view_see_all">See all</string>-->
<!--<string name="abc_activitychooserview_choose_application">Choose an app</string>-->
<!--<string name="abc_searchview_description_clear">Clear query</string>-->
<!--<string name="abc_searchview_description_query">Search query</string>-->
<!--<string name="abc_searchview_description_search">Search</string>-->
<!--<string name="abc_searchview_description_submit">Submit query</string>-->
<!--<string name="abc_searchview_description_voice">Voice search</string>-->
<!--<string name="abc_shareactionprovider_share_with">Share with</string>-->
<!--<string name="abc_shareactionprovider_share_with_application">Share with %s</string>-->
<!--<string name="selTutto_button_label">Sel.Tutti</string>-->
<!--<string name="timer_id">Timer Allineamento base dati remota (Minuti)</string>-->
