<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:logo="@drawable/banner_img"
            app:menu="@menu/login"
            app:title="@string/app_name" />

        <TextView
            android:id="@+id/formLogin_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:text="@string/form_Login" />

        <TextView
            android:id="@+id/utente_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/utente" />

        <EditText
            android:id="@+id/edit_utenza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/pwd_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/edit_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="" />

        <CheckBox
            android:id="@+id/chkpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_checkbox_caption" />
    </LinearLayout>

    <Button
        android:id="@+id/Exit_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Exit_button_label"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/login_button_label"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button" />
</RelativeLayout>
