<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_ins_manutenzione"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fbfbfb"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/formInsManu_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="#000000"
                android:gravity="center"
                android:text="@string/insManutenzione"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic" />

            <TextView
                android:id="@+id/idmacchina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/idtipomacchina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/idtipomanutenzione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/etiCliente"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="#ff33b5e5"
                android:gravity="center"
                android:text="@string/descCliente"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/DescMacchina"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="#ffffff"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/etiTipoManutenzione"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:background="#000000"
                android:text="@string/tipomanutenzione"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/etiPvendArtInsRic"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:background="#000000"
                android:text="@string/nbattute"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <Spinner
                android:id="@+id/spinnerTipiManutenzione"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/TipoManutenzione"
                android:layout_alignParentRight="true"
                android:background="#ffffff"
                android:drawSelectorOnTop="true"
                android:gravity="center"
                android:prompt="@string/scegliTipoManutenzione"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal|bold|italic"
                app:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/insnbattute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:digits="0123456789"
                android:imeOptions="actionSend"
                android:inputType="number"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/etiDataInsMan"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="#000000"
                android:drawableLeft="@android:drawable/ic_menu_today"
                android:text="@string/dataManutenzione"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp" />

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/etiDescrizione"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="#000000"
                android:text="@string/DescrizioneManutenzione"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <EditText
                android:id="@+id/edit_descrizione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <TextView
                android:id="@+id/etiNote"
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:background="#000000"
                android:text="@string/NoteManutenzione"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <EditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_span="2"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp">

            <Button
                android:id="@+id/SaveInsMan_button"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginRight="20dp"
                android:text="@string/Save_button_label" />

            <Button
                android:id="@+id/ExitIns_button"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:text="@string/Exit_button_label" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
